--- a/com.Selenium.AppTests/application.html
+++ b/com.Selenium.AppTests/application.html
@@ -373,3 +373,459 @@ Log session start time Thu Feb 04 22:53:25 CST 2021<br>
 <td>AppLoginTest.java:169</td>
 <td title="Message">closing browser</td>
 </tr>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Application logs</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Fri Feb 05 00:21:00 CST 2021<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>0</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:71</td>
+<td title="Message">verify user name</td>
+</tr>
+
+<tr>
+<td>1144</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:82</td>
+<td title="Message">verify password</td>
+</tr>
+
+<tr>
+<td>2332</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:93</td>
+<td title="Message">verify button</td>
+</tr>
+
+<tr>
+<td>3204</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:101</td>
+<td title="Message">verify sign out</td>
+</tr>
+
+<tr>
+<td>5928</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">Couldn't find template in cache for &quot;Extent.ftl&quot;(&quot;en_US&quot;, UTF-8, parsed); will try to load it.</td>
+</tr>
+
+<tr>
+<td>5929</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">TemplateLoader.findTemplateSource(&quot;Extent_en_US.ftl&quot;): Not found</td>
+</tr>
+
+<tr>
+<td>5931</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">TemplateLoader.findTemplateSource(&quot;Extent_en.ftl&quot;): Not found</td>
+</tr>
+
+<tr>
+<td>5932</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">TemplateLoader.findTemplateSource(&quot;Extent.ftl&quot;): Found</td>
+</tr>
+
+<tr>
+<td>5933</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">Loading template for &quot;Extent.ftl&quot;(&quot;en_US&quot;, UTF-8, parsed) from &quot;jar:file:/C:/Windows/system32/config/systemprofile/.m2/repository/com/relevantcodes/extentreports/2.41.2/extentreports-2.41.2.jar!/com/relevantcodes/extentreports/view/Extent.ftl&quot;</td>
+</tr>
+
+<tr>
+<td>6937</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:169</td>
+<td title="Message">closing browser</td>
+</tr>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Application logs</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Fri Feb 05 17:51:23 CST 2021<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>0</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:71</td>
+<td title="Message">verify user name</td>
+</tr>
+
+<tr>
+<td>887</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:82</td>
+<td title="Message">verify password</td>
+</tr>
+
+<tr>
+<td>2078</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:93</td>
+<td title="Message">verify button</td>
+</tr>
+
+<tr>
+<td>2896</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:101</td>
+<td title="Message">verify sign out</td>
+</tr>
+
+<tr>
+<td>5744</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">Couldn't find template in cache for &quot;Extent.ftl&quot;(&quot;en_US&quot;, UTF-8, parsed); will try to load it.</td>
+</tr>
+
+<tr>
+<td>5746</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">TemplateLoader.findTemplateSource(&quot;Extent_en_US.ftl&quot;): Not found</td>
+</tr>
+
+<tr>
+<td>5747</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">TemplateLoader.findTemplateSource(&quot;Extent_en.ftl&quot;): Not found</td>
+</tr>
+
+<tr>
+<td>5749</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">TemplateLoader.findTemplateSource(&quot;Extent.ftl&quot;): Found</td>
+</tr>
+
+<tr>
+<td>5749</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">Loading template for &quot;Extent.ftl&quot;(&quot;en_US&quot;, UTF-8, parsed) from &quot;jar:file:/C:/Users/mohitha/.m2/repository/com/relevantcodes/extentreports/2.41.2/extentreports-2.41.2.jar!/com/relevantcodes/extentreports/view/Extent.ftl&quot;</td>
+</tr>
+
+<tr>
+<td>6637</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:169</td>
+<td title="Message">closing browser</td>
+</tr>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Application logs</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Fri Feb 05 19:00:33 CST 2021<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>0</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:71</td>
+<td title="Message">verify user name</td>
+</tr>
+
+<tr>
+<td>919</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:82</td>
+<td title="Message">verify password</td>
+</tr>
+
+<tr>
+<td>1942</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:93</td>
+<td title="Message">verify button</td>
+</tr>
+
+<tr>
+<td>2525</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:101</td>
+<td title="Message">verify sign out</td>
+</tr>
+
+<tr>
+<td>5292</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">Couldn't find template in cache for &quot;Extent.ftl&quot;(&quot;en_US&quot;, UTF-8, parsed); will try to load it.</td>
+</tr>
+
+<tr>
+<td>5294</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">TemplateLoader.findTemplateSource(&quot;Extent_en_US.ftl&quot;): Not found</td>
+</tr>
+
+<tr>
+<td>5296</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">TemplateLoader.findTemplateSource(&quot;Extent_en.ftl&quot;): Not found</td>
+</tr>
+
+<tr>
+<td>5297</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">TemplateLoader.findTemplateSource(&quot;Extent.ftl&quot;): Found</td>
+</tr>
+
+<tr>
+<td>5298</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">Loading template for &quot;Extent.ftl&quot;(&quot;en_US&quot;, UTF-8, parsed) from &quot;jar:file:/C:/Users/mohitha/.m2/repository/com/relevantcodes/extentreports/2.41.2/extentreports-2.41.2.jar!/com/relevantcodes/extentreports/view/Extent.ftl&quot;</td>
+</tr>
+
+<tr>
+<td>6298</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:169</td>
+<td title="Message">closing browser</td>
+</tr>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Application logs</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Fri Feb 05 19:08:19 CST 2021<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>0</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:71</td>
+<td title="Message">verify user name</td>
+</tr>
+
+<tr>
+<td>891</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:82</td>
+<td title="Message">verify password</td>
+</tr>
+
+<tr>
+<td>2009</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:93</td>
+<td title="Message">verify button</td>
+</tr>
+
+<tr>
+<td>2666</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:101</td>
+<td title="Message">verify sign out</td>
+</tr>
+
+<tr>
+<td>5309</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">Couldn't find template in cache for &quot;Extent.ftl&quot;(&quot;en_US&quot;, UTF-8, parsed); will try to load it.</td>
+</tr>
+
+<tr>
+<td>5311</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">TemplateLoader.findTemplateSource(&quot;Extent_en_US.ftl&quot;): Not found</td>
+</tr>
+
+<tr>
+<td>5313</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">TemplateLoader.findTemplateSource(&quot;Extent_en.ftl&quot;): Not found</td>
+</tr>
+
+<tr>
+<td>5314</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">TemplateLoader.findTemplateSource(&quot;Extent.ftl&quot;): Found</td>
+</tr>
+
+<tr>
+<td>5315</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#339933">DEBUG</font></td>
+<td title="freemarker.cache category">freemarker.cache</td>
+<td>_Log4jLoggerFactory.java:45</td>
+<td title="Message">Loading template for &quot;Extent.ftl&quot;(&quot;en_US&quot;, UTF-8, parsed) from &quot;jar:file:/C:/Users/mohitha/.m2/repository/com/relevantcodes/extentreports/2.41.2/extentreports-2.41.2.jar!/com/relevantcodes/extentreports/view/Extent.ftl&quot;</td>
+</tr>
+
+<tr>
+<td>6369</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.AppProject.AppLoginTest category">com.AppProject.AppLoginTest</td>
+<td>AppLoginTest.java:169</td>
+<td title="Message">closing browser</td>
+</tr>
