--- a/com.Selenium.AppTests/extent/report.html
+++ b/com.Selenium.AppTests/extent/report.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2021-02-04 22:53:38</span>
+					<span class='suite-started-time'>2021-02-05 19:29:50</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 13s+153ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 10s+938ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 13s+153ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 10s+938ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2021-02-04 22:53:25</span> 
+							<span class='panel-lead suite-started-time'>2021-02-05 19:29:39</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2021-02-04 22:53:38</span> 
+							<span class='panel-lead suite-ended-time'>2021-02-05 19:29:50</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,15 +237,15 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active fail ' extentid='56e3d763-a4d5-4b6d-acf8-0f8484844100'>
+										<li class='collection-item test displayed active pass ' extentid='7d4bf38c-4efd-4b70-9bbe-ad7c1056fcbb'>
 											<div class='test-head'>
 												<span class='test-name'>login test </span>
-												<span class='test-status label right outline capitalize fail'>fail</span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-02-04 22:53:32</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-02-05 19:29:44</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
@@ -264,27 +264,27 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>22:53:32</td>
+																	<td class='timestamp'>19:29:44</td>
 																	<td class='step-details'>verify user name</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>22:53:33</td>
-																	<td class='step-details'>Snapshot below: <a href='C:\Users\mohitha\SeleniumZipFiles\PageObjectModel Framework\com.Selenium.AppTests\.\screens\verify user name20210204105333.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\mohitha\SeleniumZipFiles\PageObjectModel Framework\com.Selenium.AppTests\.\screens\verify user name20210204105333.png' /></a></td>
+																	<td class='timestamp'>19:29:45</td>
+																	<td class='step-details'>Snapshot below: <a href='C:\Users\mohitha\git\POMFrameWork\com.Selenium.AppTests\.\screens\verify user name20210205072945.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\mohitha\git\POMFrameWork\com.Selenium.AppTests\.\screens\verify user name20210205072945.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>22:53:34</td>
+																	<td class='timestamp'>19:29:45</td>
 																	<td class='step-details'>verify password</td>
 																</tr>
 																<tr>
-																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>22:53:34</td>
-																	<td class='step-details'>Snapshot below: <a href='C:\Users\mohitha\SeleniumZipFiles\PageObjectModel Framework\com.Selenium.AppTests\.\screens\verify password20210204105334.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\mohitha\SeleniumZipFiles\PageObjectModel Framework\com.Selenium.AppTests\.\screens\verify password20210204105334.png' /></a></td>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>19:29:46</td>
+																	<td class='step-details'>Snapshot below: <a href='C:\Users\mohitha\git\POMFrameWork\com.Selenium.AppTests\.\screens\verify password20210205072946.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\mohitha\git\POMFrameWork\com.Selenium.AppTests\.\screens\verify password20210205072946.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>22:53:34</td>
+																	<td class='timestamp'>19:29:46</td>
 																	<td class='step-details'>verify button</td>
 																</tr>
 														</tbody>
