--- a/com.Selenium.AppTests/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.Selenium.AppTests/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="679097">  <td>21/01/29 06:29:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.launchbrowser()[pri:0, instance:com.Selenium.AppScripts.AppTest@757acd7b]">launchbrowser</td> 
-  <td>main@364639279</td>   <td></td> </tr>
+<tr bgcolor="bb6bea">  <td>21/02/05 19:29:39</td>   <td>0</td> <td title="&gt;&gt;AppLoginTest.AppSuite()[pri:0, instance:com.AppProject.AppLoginTest@4b5a5ed1]">&gt;&gt;AppSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1058634310</td>   <td></td> </tr>
+<tr bgcolor="bb6bea">  <td>21/02/05 19:29:49</td>   <td>10720</td> <td>&nbsp;</td><td title="&lt;&lt;AppLoginTest.closeBrowser()[pri:0, instance:com.AppProject.AppLoginTest@4b5a5ed1]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1058634310</td>   <td></td> </tr>
+<tr bgcolor="bb6bea">  <td>21/02/05 19:29:39</td>   <td>219</td> <td>&nbsp;</td><td title="&gt;&gt;AppLoginTest.launchBrowser()[pri:0, instance:com.AppProject.AppLoginTest@4b5a5ed1]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1058634310</td>   <td></td> </tr>
+<tr bgcolor="bb6bea">  <td>21/02/05 19:29:48</td>   <td>8956</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppLoginTest.verifyinvalidlogin()[pri:2, instance:com.AppProject.AppLoginTest@4b5a5ed1]">verifyinvalidlogin</td> 
+  <td>main@1058634310</td>   <td></td> </tr>
+<tr bgcolor="bb6bea">  <td>21/02/05 19:29:44</td>   <td>5426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppLoginTest.verifyvalidlogin()[pri:1, instance:com.AppProject.AppLoginTest@4b5a5ed1]">verifyvalidlogin</td> 
+  <td>main@1058634310</td>   <td></td> </tr>
 </table>
