--- a/com.Selenium.AppTests/test-output/old/Suite/methods-alphabetical.html
+++ b/com.Selenium.AppTests/test-output/old/Suite/methods-alphabetical.html
@@ -1,6 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d88cf5">  <td>21/02/02 06:32:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTestScripts.launchbrowser()[pri:0, instance:com.Selenium.AppScripts.AppTestScripts@7e9131d5]">launchbrowser</td> 
-  <td>main@2051120548</td>   <td></td> </tr>
+<tr bgcolor="b96fde">  <td>21/02/05 19:58:42</td>   <td>0</td> <td title="&gt;&gt;AppLoginTest.AppSuite()[pri:0, instance:com.AppProject.AppLoginTest@59d016c9]">&gt;&gt;AppSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1668016508</td>   <td></td> </tr>
+<tr bgcolor="b96fde">  <td>21/02/05 19:58:52</td>   <td>10233</td> <td>&nbsp;</td><td title="&lt;&lt;AppLoginTest.closeBrowser()[pri:0, instance:com.AppProject.AppLoginTest@59d016c9]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1668016508</td>   <td></td> </tr>
+<tr bgcolor="b96fde">  <td>21/02/05 19:58:42</td>   <td>196</td> <td>&nbsp;</td><td title="&gt;&gt;AppLoginTest.launchBrowser()[pri:0, instance:com.AppProject.AppLoginTest@59d016c9]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1668016508</td>   <td></td> </tr>
+<tr bgcolor="b96fde">  <td>21/02/05 19:58:50</td>   <td>8259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppLoginTest.verifyinvalidlogin()[pri:2, instance:com.AppProject.AppLoginTest@59d016c9]">verifyinvalidlogin</td> 
+  <td>main@1668016508</td>   <td></td> </tr>
+<tr bgcolor="b96fde">  <td>21/02/05 19:58:47</td>   <td>4459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppLoginTest.verifyvalidlogin()[pri:1, instance:com.AppProject.AppLoginTest@59d016c9]">verifyvalidlogin</td> 
+  <td>main@1668016508</td>   <td></td> </tr>
 </table>
